# Matrix-Calculator-App

./: Implementation-Details.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp
app/src/main/java/com/example/matrixcalculator/: MainActivity.kt  MatrixOperations.kt
app/src/main/java/com/example/matrixcalculator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_divide.xml
gradle/wrapper/: gradle-wrapper.properties
